// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchResult renders a basic result correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 24px;
  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.1);
}

.emotion-0 .search-result-title {
  color: #016BF8;
}

.dark-theme .emotion-0 .search-result-title {
  color: #0498EC;
}

.emotion-0:visited .search-result-title {
  color: #5E0C9E;
}

.dark-theme .emotion-0:visited .search-result-title {
  color: #F1D4FD;
}

.emotion-0:hover .search-result-title,
.emotion-0:focus .search-result-title {
  color: #016BF8;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.dark-theme .emotion-0:hover .search-result-title,
.dark-theme .emotion-0:focus .search-result-title {
  color: #0498EC;
}

.emotion-0:hover .search-result-container,
.emotion-0:focus .search-result-container {
  background-color: rgba(231, 238, 236, 0.4);
  -webkit-transition: background-color 150ms ease-in;
  transition: background-color 150ms ease-in;
}

.emotion-0:hover {
  opacity: 1;
  box-shadow: 0px 0px 5px 1px rgba(58, 63, 60, 0.15);
}

.dark-theme .emotion-0 {
  box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.15);
}

.dark-theme .emotion-0:hover {
  opacity: 1;
  box-shadow: 0px 0px 5px 3px rgba(133, 131, 131, 0.15);
}

.emotion-1 {
  height: 100%;
}

.emotion-2 {
  font-size: 13px;
  line-height: 24px;
  letter-spacing: 0.5px;
  height: 24px;
  margin-bottom: 8px;
  margin-top: 0;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  position: relative;
}

@media only screen and (max-width: 480px) {
  .emotion-2 {
    font-size: 16px;
    line-height: 28px;
    font-weight: 600;
  }
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  color: var(--font-color-primary);
  line-height: 20px;
  margin-bottom: 16px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  min-height: 20px;
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 600;
}

.emotion-3>span {
  background-color: #C0FAE6;
}

.dark-theme .emotion-3>span {
  background-color: #00684A;
}

.emotion-4 {
  bottom: 0;
  margin-bottom: 24px;
  overflow: hidden;
  height: 26px;
}

<a
    class="emotion-0"
    href="/docs/manual/"
  >
    <div
      class="emotion-1 search-result-container"
    >
      <p
        class="emotion-2 search-result-title"
      >
        Getting Started
      </p>
      <p
        class="emotion-3"
      >
        Learn how to get started with MongoDB.
      </p>
      <div
        class="emotion-4"
      />
    </div>
  </a>
</DocumentFragment>
`;

exports[`SearchResult renders with a learn more link 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 24px;
  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.1);
}

.emotion-0 .search-result-title {
  color: #016BF8;
}

.dark-theme .emotion-0 .search-result-title {
  color: #0498EC;
}

.emotion-0:visited .search-result-title {
  color: #5E0C9E;
}

.dark-theme .emotion-0:visited .search-result-title {
  color: #F1D4FD;
}

.emotion-0:hover .search-result-title,
.emotion-0:focus .search-result-title {
  color: #016BF8;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.dark-theme .emotion-0:hover .search-result-title,
.dark-theme .emotion-0:focus .search-result-title {
  color: #0498EC;
}

.emotion-0:hover .search-result-container,
.emotion-0:focus .search-result-container {
  background-color: rgba(231, 238, 236, 0.4);
  -webkit-transition: background-color 150ms ease-in;
  transition: background-color 150ms ease-in;
}

.emotion-0:hover {
  opacity: 1;
  box-shadow: 0px 0px 5px 1px rgba(58, 63, 60, 0.15);
}

.dark-theme .emotion-0 {
  box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.15);
}

.dark-theme .emotion-0:hover {
  opacity: 1;
  box-shadow: 0px 0px 5px 3px rgba(133, 131, 131, 0.15);
}

<a
    class="emotion-0"
    href="/docs/atlas/"
  />
  .emotion-0 {
  height: 100%;
}

.emotion-1 {
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 24px;
  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.1);
}

.emotion-1 .search-result-title {
  color: #016BF8;
}

.dark-theme .emotion-1 .search-result-title {
  color: #0498EC;
}

.emotion-1:visited .search-result-title {
  color: #5E0C9E;
}

.dark-theme .emotion-1:visited .search-result-title {
  color: #F1D4FD;
}

.emotion-1:hover .search-result-title,
.emotion-1:focus .search-result-title {
  color: #016BF8;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.dark-theme .emotion-1:hover .search-result-title,
.dark-theme .emotion-1:focus .search-result-title {
  color: #0498EC;
}

.emotion-1:hover .search-result-container,
.emotion-1:focus .search-result-container {
  background-color: rgba(231, 238, 236, 0.4);
  -webkit-transition: background-color 150ms ease-in;
  transition: background-color 150ms ease-in;
}

.emotion-1:hover {
  opacity: 1;
  box-shadow: 0px 0px 5px 1px rgba(58, 63, 60, 0.15);
}

.dark-theme .emotion-1 {
  box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.15);
}

.dark-theme .emotion-1:hover {
  opacity: 1;
  box-shadow: 0px 0px 5px 3px rgba(133, 131, 131, 0.15);
}

.emotion-2 {
  font-size: 13px;
  line-height: 24px;
  letter-spacing: 0.5px;
  height: 24px;
  margin-bottom: 8px;
  margin-top: 0;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  position: relative;
}

@media only screen and (max-width: 480px) {
  .emotion-2 {
    font-size: 16px;
    line-height: 28px;
    font-weight: 600;
  }
}

.emotion-3 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  color: var(--font-color-primary);
  line-height: 20px;
  margin-bottom: 16px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  min-height: 20px;
}

.emotion-3 strong,
.emotion-3 b {
  font-weight: 600;
}

.emotion-3>span {
  background-color: #C0FAE6;
}

.dark-theme .emotion-3>span {
  background-color: #00684A;
}

.emotion-4 {
  bottom: 0;
  margin-bottom: 24px;
  overflow: hidden;
  height: 26px;
}

.emotion-5 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-7 {
  font-size: 13px;
  letter-spacing: 0.5px;
  line-height: 16px;
}

<div
    class="emotion-0 search-result-container"
  >
    <a
      class="emotion-1"
      href="/docs/atlas/"
    >
      <p
        class="emotion-2 search-result-title"
      >
        Atlas Documentation
      </p>
      <p
        class="emotion-3"
      >
        MongoDB Atlas is a cloud database service.
      </p>
      <div
        class="emotion-4"
      />
    </a>
    <div
      class="emotion-5"
    >
      <a
        class="emotion-1"
        href="/docs/atlas/"
      />
      <a
        class="emotion-7"
        href="/docs/atlas/"
      >
        <strong>
          Learn More
        </strong>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
